--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     justify-content: space-between;
     position: fixed;
     top: 0px;
+    align-items: center;
 }
 .titulo{
     display: flex;
@@ -51,6 +52,24 @@ justify-content: center;
 align-items: center;
 gap: 2rem;
 }
+.menu-mobile{
+    display: none;
+}
+.menu-link-mobile{
+    display: none;
+}
+.container_menu{
+    width: 4rem;
+    height: 4rem;
+}
+.img-menu{
+    width: 100%;
+    height: 100%;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
 .comida{
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -76,6 +95,7 @@ gap: 2rem;
 }
 h2{
     margin: 0;
+    margin-top: -15px;
 }
 .alimento{
     display: flex;
@@ -83,8 +103,53 @@ h2{
 }
 .caracteristicas{
     font-size: 14px;
+    margin: auto;
+    width: 75%;
+    height: auto;
 }
 .precio{
     display: flex;
     justify-content: end;
+    margin: 0;
+}
+@media  screen and (max-width:850px) {
+    .comida{
+        gap: 1rem;
+    }
+    .caracteristicas{
+        width: 100%;
+    }
+    .alimento{
+        height: auto;
+    }
+}
+@media screen and (max-width: 390px){
+    .comida{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .menu{
+        display: none;
+    }
+    .menu-mobile{
+        display: flex;
+    }
+    .menu-link-mobile{
+        display: none;
+        margin-top: -80px;
+        flex-direction: column;
+        align-items: end;
+        background-color: var(--naranjaFuerte);
+        padding-right: 20px;
+        position: fixed;
+        width: 100%;
+    }
+    .logo{
+        margin: 0;
+    }
+
+    a{
+        
+        color: white;
+    }
 }
